tests/fixtures/errors/private_escape.z
# Taking a `.private` view of a value outside its own type is rejected: only the
# type's own methods may hand out its private interface to a friend.
Bag: class { a: i64 count: i64 } as {
    public: unit { :count }
}

main: function is {
    with b: (Bag a: 10 count: 1) do {
        bp: b.private
        print "\{bp.count}"
    }
}
